--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,14 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+
+import PrincipalMain from '../sections/PrincipalMain.astro';
 ---
 
-<Layout title="">
-	<main>
-		<h1 class="text-white font-black">
-			Hola Mundo
-		</h1>
+<Layout title="Título del Layout">
+    <PrincipalMain />
+	<main >
+
 	</main>
-	
-		
 </Layout>
 
 
