--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,15 @@
 ---
 import Layout from '../layouts/Layout.astro';
-
+import InfoMain from '../sections/info.astro'
 import PrincipalMain from '../sections/PrincipalMain.astro';
+import InfoBenefits from '../sections/infoBenefits.astro'
 ---
 
 <Layout title="Título del Layout">
     <PrincipalMain />
 	<main >
+		<InfoMain />
+		<InfoBenefits />
 
 	</main>
 </Layout>
