--- a/src/sections/infoBenefits.astro
+++ b/src/sections/infoBenefits.astro
@@ -1,4 +1,16 @@
-<section>
+<section class="flex  text-center flex-col h-screen">
+<h1 class="text-primary italic font-black text-5xl mt-5">QUE OFRECEMOS</h1>
+<p class="text-white text-lg mt-5 mb-9 tracking-wide">Nos comprometemos a brindarte con la mejor experiencia de entrenamiento.</p>
+<article class="grid grid-cols-3 gap-4 mx-16  h-96">
+    <div class="bg-white " style="background-image: url('../src/img/imgSecond.webp');">
+       <h1 class="text-white">NUESTRO GIMNASIO</h1>
+    </div>
+    <div class="bg-white " style="background-image: url('../src/img/imgSecond.webp');">
+        IMG2
+    </div>
+    <div class="bg-white " style="background-image: url('../src/img/imgSecond.webp');">
+        IMG3
+    </div>
+</article>
 
-    
 </section>
