--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,8 @@ import Layout from '../layouts/Layout.astro';
 import InfoMain from '../sections/info.astro'
 import PrincipalMain from '../sections/PrincipalMain.astro';
 import InfoBenefits from '../sections/infoBenefits.astro'
+import AfterBeforeInfo from '../sections/afterBeforeInfo.astro'
+
 ---
 
 <Layout title="Título del Layout">
@@ -10,6 +12,8 @@ import InfoBenefits from '../sections/infoBenefits.astro'
 	<main >
 		<InfoMain />
 		<InfoBenefits />
+		<AfterBeforeInfo />
+
 	</main>
 </Layout>
 
