--- a/src/sections/afterBeforeInfo.astro
+++ b/src/sections/afterBeforeInfo.astro
@@ -1,15 +1,24 @@
-<section class="flex  text-center flex-col h-mxScreem">
+<section class="flex  text-center flex-col h-screen">
     <h1 class="text-primary italic font-black text-5xl my-16 uppercase">Antes y despúes</h1>
-    <article class="grid grid-cols-3 gap-4 mx-16  h-96 ">
-        <div class="bg-white bg-cover flex justify-center items-center hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('../src/img/secondIMG4.png');">
-            <h1 class="uppercase  text-primary text-3xl font-black">Nuestro gimnasio</h1>
+    <article class="grid grid-cols-3 gap-7 mx-32 h-96 ">
+        <div class="bg-white bg-cover flex  flex-col justify-end  hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('../src/img/personOne.png');">
+           <div class="h-2/8 w-full bg-primary  px-8 py-4   ">
+                <p class="text-sm mb-5">Los testimonios son citas cortas de personas a las que les encanta tu marca. Es una excelente forma de convencer a los clientes para que prueben tus servicios.</p>
+                <b class="italic">Dolores Blanca, 31</b>   
+            </div>
         </div>
-        <div class="bg-white bg-cover flex justify-center items-center hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('../src/img/secondIMG6.png');">
-            <h1 class="uppercase  text-primary text-3xl font-black">Explora nuestras clases en grupo</h1>
-        </div>
-        <div class="bg-white bg-cover flex justify-center items-center hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('../src/img/secondIMG7.png');">
-            <h1 class="uppercase  text-primary text-3xl font-black">entrenamientos personales</h1>
-        </div>
+        <div class="bg-white bg-cover flex  flex-col justify-end  hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('../src/img/personTwo.png');">
+            <div class="h-2/8 w-full bg-primary  px-8 py-4   ">
+                 <p class="text-sm mb-5">Los testimonios son citas cortas de personas a las que les encanta tu marca. Es una excelente forma de convencer a los clientes para que prueben tus servicios.</p>
+                 <b class="italic">Lauren Cross, 28</b>   
+             </div>
+         </div>
+         <div class="bg-white bg-cover flex  flex-col justify-end  hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('../src/img/personThirt.png');">
+            <div class="h-2/8 w-full bg-primary  px-8 py-4   ">
+                 <p class="text-sm mb-5">Los testimonios son citas cortas de personas a las que les encanta tu marca. Es una excelente forma de convencer a los clientes para que prueben tus servicios.</p>
+                 <b class="italic">Tomás Cano, 44</b>   
+             </div>
+         </div>
     </article>
     
     </section>
