--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import InfoMain from '../sections/info.astro'
 import PrincipalMain from '../sections/PrincipalMain.astro';
 import InfoBenefits from '../sections/infoBenefits.astro'
 import AfterBeforeInfo from '../sections/afterBeforeInfo.astro'
+import Footer from '../sections/footer.astro';
 
 ---
 
@@ -13,8 +14,9 @@ import AfterBeforeInfo from '../sections/afterBeforeInfo.astro'
 		<InfoMain />
 		<InfoBenefits />
 		<AfterBeforeInfo />
-
 	</main>
+	<Footer />
+ 
 </Layout>
 
 
