--- a/src/sections/afterBeforeInfo.astro
+++ b/src/sections/afterBeforeInfo.astro
@@ -1,5 +1,5 @@
 <section class="flex  text-center flex-col h-screen">
-    <h1 class="text-primary italic font-black text-5xl my-16 uppercase">Antes y despúes</h1>
+    <h1 class="text-primary italic font-black text-5xl mt-4 mb-16 uppercase">Antes y despúes</h1>
     <article class="grid grid-cols-3 gap-7 mx-32 h-96 ">
         <div class="bg-white bg-cover flex  flex-col justify-end  hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('../src/img/personOne.png');">
            <div class="h-2/8 w-full bg-primary  px-8 py-4   ">
