--- a/src/sections/footer.astro
+++ b/src/sections/footer.astro
@@ -1,5 +1,7 @@
 <footer class="h-screen bg-cover bg-no-repeat  flex flex-col justify-end" style="background-image: url('../src/img/footer.png');">
-<h1 class="font-black text-primary text-6xl uppercase">¡Ponte en contacto hoy!</h1>
+<div class="mb-52 ml-14 max-w-96">
+    <h1 class="font-black text-primary text-6xl uppercase italic tracking-wide">¡Ponte en contacto hoy!</h1>
+</div>
 <div class="h-1/4 bg-primary grid grid-cols-3 p-9">
     <div>
       <h2 class="font-black italic text-2xl">DIRRECCIÓN</h2>
