--- a/src/sections/PrincipalMain.astro
+++ b/src/sections/PrincipalMain.astro
@@ -5,8 +5,12 @@
  
 <section class="h-screen relative flex justify-center items-center text-center animate-blurred-fade-in ">
     <div class="absolute z-40">
-        <h1 class="font-black text-8xl text-white italic ">SÉ EL MEJOR</h1>
+        <h1 class="font-black text-8xl text-white italic " >SÉ EL MEJOR</h1>
         <button class="bg-primary mt-9 py-3 px-12 tracking-wider text-xl hover:scale-105 transition hover:shadow-lg hover:opacity-90"><a href="#">ÚNETE HOY</a></button>
     </div>
     <img   class="object-cover h-screen w-screen saturate-150" src="../src/img/mainIMG.webp" alt="">
 </section>
+
+<script>
+
+</script>
