--- a/src/sections/info.astro
+++ b/src/sections/info.astro
@@ -1,13 +1,13 @@
-<section class="grid grid-cols-2  h-screen">
-  <article class="max-w-md flex  flex-col justify-center ml-52">
-    <h1 class="uppercase text-primary text-6xl font-black italic ">Sobre nuestra familia deportista</h1>
-    <p class="text-white text-xl tracking-wider my-8">
+<section class="grid grid-cols-2 movil:grid-cols-1  h-screen">
+  <article class="max-w-md flex  flex-col justify-center ml-52 movil:ml-3 movil:text-center movil:px-4">
+    <h1 class="uppercase text-primary text-6xl font-black italicc movil:text-4xl ">Sobre nuestra familia deportista</h1>
+    <p class="text-white text-xl tracking-wider my-8 movil:text-lg">
       Astrás lo fundó en 2001 un matrimonio, Rubén y Adoración. Desde entonces,
       nos hemos expandido hasta más de 115 lugares en todo el país.
     </p>
     <a class="text-white font-black tracking-widest underline hover:scale-105 transition hover:underline  hover:text-primary"  href="">Más información</a>
   </article>
-  <article class="flex  gap-7 justify-center items-center px-9">
+  <article class="flex f gap-7 justify-center items-center px-9 movil:gap-2">
     <div class="h-3/5 w-60  mb-24">
         <img class="w-full h-full object-cover  saturate-50  hover:saturate-100 hover:scale-105 transition  hover:shadow-2xl " src="../src/img/imgSecond.webp" alt="">
     </div>
@@ -17,3 +17,4 @@
     </div>
   </article>
 </section>
+
