--- a/src/sections/info.astro
+++ b/src/sections/info.astro
@@ -9,10 +9,10 @@
   </article>
   <article class="flex f gap-7 justify-center items-center px-9 movil:gap-2">
     <div class="h-3/5 w-60  mb-24">
-        <img class="w-full h-full object-cover  saturate-50  hover:saturate-100 hover:scale-105 transition  hover:shadow-2xl " src="../src/img/imgSecond.webp" alt="">
+        <img class="w-full h-full object-cover  saturate-50  hover:saturate-100 hover:scale-105 transition  hover:shadow-2xl " src="https://i.postimg.cc/G2yTJtwV/img-Second.webp" alt="">
     </div>
     <div class="h-3/5 w-60 mt-24 ">
-        <img  class="w-full h-full object-cover saturate-50  hover:saturate-100 hover:scale-105 transition hover:shadow-2xl " src="../src/img/imgThirth.webp" alt="">
+        <img  class="w-full h-full object-cover saturate-50  hover:saturate-100 hover:scale-105 transition hover:shadow-2xl " src="https://i.postimg.cc/zBK3HQT1/img-Thirth.webp" alt="">
 
     </div>
   </article>
