--- a/src/sections/footer.astro
+++ b/src/sections/footer.astro
@@ -1,4 +1,4 @@
-<footer class="h-screen bg-cover bg-no-repeat  flex flex-col justify-end" style="background-image: url('../src/img/footer.png');">
+<footer class="h-screen bg-cover bg-no-repeat  flex flex-col justify-end" style="background-image: url('https://i.postimg.cc/3w3tqMJt/footer.png');">
 <div class="mb-52 ml-14 max-w-96">
     <h1 class="font-black text-primary text-6xl uppercase italic tracking-wide">¡Ponte en contacto hoy!</h1>
 </div>
