--- a/src/sections/afterBeforeInfo.astro
+++ b/src/sections/afterBeforeInfo.astro
@@ -1,19 +1,19 @@
 <section class="flex  text-center flex-col h-screen">
     <h1 class="text-primary italic font-black text-5xl mt-4 mb-16 uppercase">Antes y despúes</h1>
     <article class="grid grid-cols-3 gap-7 mx-32 h-96 ">
-        <div class="bg-white bg-cover flex  flex-col justify-end  hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('../src/img/personOne.png');">
+        <div class="bg-white bg-cover flex  flex-col justify-end  hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('https://i.postimg.cc/c4K27NrY/person-One.png');">
            <div class="h-2/8 w-full bg-primary  px-8 py-4   ">
                 <p class="text-sm mb-5">Los testimonios son citas cortas de personas a las que les encanta tu marca. Es una excelente forma de convencer a los clientes para que prueben tus servicios.</p>
                 <b class="italic">Dolores Blanca, 31</b>   
             </div>
         </div>
-        <div class="bg-white bg-cover flex  flex-col justify-end  hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('../src/img/personTwo.png');">
+        <div class="bg-white bg-cover flex  flex-col justify-end  hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('https://i.postimg.cc/vBq29Py3/person-Two.png');">
             <div class="h-2/8 w-full bg-primary  px-8 py-4   ">
                  <p class="text-sm mb-5">Los testimonios son citas cortas de personas a las que les encanta tu marca. Es una excelente forma de convencer a los clientes para que prueben tus servicios.</p>
                  <b class="italic">Lauren Cross, 28</b>   
              </div>
          </div>
-         <div class="bg-white bg-cover flex  flex-col justify-end  hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('../src/img/personThirt.png');">
+         <div class="bg-white bg-cover flex  flex-col justify-end  hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('https://i.postimg.cc/4yj82mmc/person-Thirt.png');">
             <div class="h-2/8 w-full bg-primary  px-8 py-4   ">
                  <p class="text-sm mb-5">Los testimonios son citas cortas de personas a las que les encanta tu marca. Es una excelente forma de convencer a los clientes para que prueben tus servicios.</p>
                  <b class="italic">Tomás Cano, 44</b>   
