--- a/src/sections/infoBenefits.astro
+++ b/src/sections/infoBenefits.astro
@@ -2,13 +2,13 @@
 <h1 class="text-primary italic font-black text-5xl mt-5">QUE OFRECEMOS</h1>
 <p class="text-white text-lg mt-5 mb-9 tracking-wide">Nos comprometemos a brindarte con la mejor experiencia de entrenamiento.</p>
 <article class="grid grid-cols-3 gap-4 mx-16  h-96 ">
-    <div class="bg-white bg-cover flex justify-center items-center hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('../src/img/secondIMG4.png');">
+    <div class="bg-white bg-cover flex justify-center items-center hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('https://i.postimg.cc/zfn1CY2p/second-IMG4.png');">
         <h1 class="uppercase  text-primary text-3xl font-black">Nuestro gimnasio</h1>
     </div>
-    <div class="bg-white bg-cover flex justify-center items-center hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('../src/img/secondIMG6.png');">
+    <div class="bg-white bg-cover flex justify-center items-center hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('https://i.postimg.cc/g2h9pPpd/second-IMG6.png');">
         <h1 class="uppercase  text-primary text-3xl font-black">Explora nuestras clases en grupo</h1>
     </div>
-    <div class="bg-white bg-cover flex justify-center items-center hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('../src/img/secondIMG7.png');">
+    <div class="bg-white bg-cover flex justify-center items-center hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('https://i.postimg.cc/yNCMYr6R/second-IMG7.png');">
         <h1 class="uppercase  text-primary text-3xl font-black">entrenamientos personales</h1>
     </div>
 </article>
