--- a/src/sections/info.astro
+++ b/src/sections/info.astro
@@ -1,17 +1,19 @@
-<section class="grid grid-cols-2 movil:grid-cols-1  h-screen">
-  <article class="max-w-md flex  flex-col justify-center ml-52 movil:ml-3 movil:text-center movil:px-4">
-    <h1 class="uppercase text-primary text-6xl font-black italicc movil:text-4xl ">Sobre nuestra familia deportista</h1>
-    <p class="text-white text-xl tracking-wider my-8 movil:text-lg">
+<section class="grid grid-cols-1 md:grid-cols-2   h-screen">
+
+  <article class=" flex flex-col  max-w-80 ml-7 justify-center items-center md:max-w-md md:items-start md:ml-52    ">
+    <h1 class="uppercase text-primary  font-black italic text-4xl text-center md:text-start  md:text-6xl">Sobre nuestra familia deportista</h1>
+    <p class="text-white text-center tracking-wider text-lg my-6  md:text-start   md:text-xl  md:my-8  ">
       Astrás lo fundó en 2001 un matrimonio, Rubén y Adoración. Desde entonces,
       nos hemos expandido hasta más de 115 lugares en todo el país.
     </p>
     <a class="text-white font-black tracking-widest underline hover:scale-105 transition hover:underline  hover:text-primary"  href="">Más información</a>
   </article>
-  <article class="flex f gap-7 justify-center items-center px-9 movil:gap-2">
-    <div class="h-3/5 w-60  mb-24">
+
+  <article class="flex  flex-row justify-center items-center md:px-9 gap-3 md:gap-7">
+    <div class="h-full w-36 mb-5  md:h-3/5    md:w-60  md:mb-24">
         <img class="w-full h-full object-cover  saturate-50  hover:saturate-100 hover:scale-105 transition  hover:shadow-2xl " src="https://i.postimg.cc/G2yTJtwV/img-Second.webp" alt="">
     </div>
-    <div class="h-3/5 w-60 mt-24 ">
+    <div class=" h-full  w-40 mb-5 md:h-3/5  md:w-60 md:mt-24 ">
         <img  class="w-full h-full object-cover saturate-50  hover:saturate-100 hover:scale-105 transition hover:shadow-2xl " src="https://i.postimg.cc/zBK3HQT1/img-Thirth.webp" alt="">
 
     </div>
