--- a/src/sections/afterBeforeInfo.astro
+++ b/src/sections/afterBeforeInfo.astro
@@ -1,20 +1,21 @@
-<section class="flex  text-center flex-col h-screen">
-    <h1 class="text-primary italic font-black text-5xl mt-4 mb-16 uppercase">Antes y despúes</h1>
-    <article class="grid grid-cols-3 gap-7 mx-32 h-96 ">
-        <div class="bg-white bg-cover flex  flex-col justify-end  hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('https://i.postimg.cc/c4K27NrY/person-One.png');">
-           <div class="h-2/8 w-full bg-primary  px-8 py-4   ">
+<section class="flex  text-center flex-col h-auto md:h-screen mt-10 md:mt-6">
+    <h1 class="text-primary italic font-black  mb-9 text-5xl md:mt-4 md:mb-16 uppercase">Antes y despúes</h1>
+   
+    <article class="grid  grid-cols-1 md:grid-cols-3 gap-4 md:gap-7 md:mx-32 mx-11    md:h-96  ">
+        <div class="bg-white bg-cover h-80  md:h-96 flex  flex-col justify-end  hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('https://i.postimg.cc/c4K27NrY/person-One.png');">
+           <div class="h-2/8 w-full bg-primary  py-4 px-2 md:px-8 md:py-4   ">
                 <p class="text-sm mb-5">Los testimonios son citas cortas de personas a las que les encanta tu marca. Es una excelente forma de convencer a los clientes para que prueben tus servicios.</p>
                 <b class="italic">Dolores Blanca, 31</b>   
             </div>
         </div>
-        <div class="bg-white bg-cover flex  flex-col justify-end  hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('https://i.postimg.cc/vBq29Py3/person-Two.png');">
-            <div class="h-2/8 w-full bg-primary  px-8 py-4   ">
+        <div class="bg-white bg-cover flex  flex-col justify-end h-80  md:h-96  hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('https://i.postimg.cc/vBq29Py3/person-Two.png');">
+            <div class="h-2/8 w-full bg-primary  py-4 px-2 md:px-8 md:py-4  ">
                  <p class="text-sm mb-5">Los testimonios son citas cortas de personas a las que les encanta tu marca. Es una excelente forma de convencer a los clientes para que prueben tus servicios.</p>
                  <b class="italic">Lauren Cross, 28</b>   
              </div>
          </div>
-         <div class="bg-white bg-cover flex  flex-col justify-end  hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('https://i.postimg.cc/4yj82mmc/person-Thirt.png');">
-            <div class="h-2/8 w-full bg-primary  px-8 py-4   ">
+         <div class="bg-white bg-cover flex  flex-col justify-end h-80  md:h-96 hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('https://i.postimg.cc/4yj82mmc/person-Thirt.png');">
+            <div class="h-2/8 w-full bg-primary  py-4 px-2 md:px-8 md:py-4  ">
                  <p class="text-sm mb-5">Los testimonios son citas cortas de personas a las que les encanta tu marca. Es una excelente forma de convencer a los clientes para que prueben tus servicios.</p>
                  <b class="italic">Tomás Cano, 44</b>   
              </div>
