--- a/src/sections/infoBenefits.astro
+++ b/src/sections/infoBenefits.astro
@@ -1,16 +1,21 @@
-<section class="flex  text-center flex-col h-screen">
-<h1 class="text-primary italic font-black text-5xl mt-5">QUE OFRECEMOS</h1>
-<p class="text-white text-lg mt-5 mb-9 tracking-wide">Nos comprometemos a brindarte con la mejor experiencia de entrenamiento.</p>
-<article class="grid grid-cols-3 gap-4 mx-16  h-96 ">
-    <div class="bg-white bg-cover flex justify-center items-center hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('https://i.postimg.cc/zfn1CY2p/second-IMG4.png');">
-        <h1 class="uppercase  text-primary text-3xl font-black">Nuestro gimnasio</h1>
+---
+const H1_style = "uppercase text-primary text-2xl md:text-3xl font-black";
+---
+
+<section class="flex text-center flex-col h-screen">
+  <h1 class="text-primary italic font-black text-5xl mt-5">QUE OFRECEMOS</h1>
+  <p class="text-white text-lg mt-5 mb-9 tracking-wide">Nos comprometemos a brindarte con la mejor experiencia de entrenamiento.</p>
+
+  <article class="grid grid-cols-1 md:grid-cols-3 gap-4  mx-9 md:mx-16 h-full">
+    <div class=" bg-cover flex justify-center items-center hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('https://i.postimg.cc/zfn1CY2p/second-IMG4.png');">
+      <h1 class={H1_style}>Nuestro gimnasio</h1>
     </div>
-    <div class="bg-white bg-cover flex justify-center items-center hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('https://i.postimg.cc/g2h9pPpd/second-IMG6.png');">
-        <h1 class="uppercase  text-primary text-3xl font-black">Explora nuestras clases en grupo</h1>
+    <div class=" bg-cover flex justify-center items-center hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('https://i.postimg.cc/g2h9pPpd/second-IMG6.png');">
+      <h1  class={H1_style} >Explora nuestras clases en grupo</h1>
     </div>
-    <div class="bg-white bg-cover flex justify-center items-center hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('https://i.postimg.cc/yNCMYr6R/second-IMG7.png');">
-        <h1 class="uppercase  text-primary text-3xl font-black">entrenamientos personales</h1>
+    <div class=" bg-cover flex justify-center items-center hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('https://i.postimg.cc/yNCMYr6R/second-IMG7.png');">
+      <h1  class={H1_style}>entrenamientos personales</h1>
     </div>
-</article>
+  </article>
 
 </section>
