--- a/src/sections/footer.astro
+++ b/src/sections/footer.astro
@@ -1,13 +1,13 @@
-<footer class="h-screen bg-cover bg-no-repeat  flex flex-col justify-end" style="background-image: url('https://i.postimg.cc/3w3tqMJt/footer.png');">
-<div class="mb-52 ml-14 max-w-96">
-    <h1 class="font-black text-primary text-6xl uppercase italic tracking-wide">¡Ponte en contacto hoy!</h1>
+<footer class="h-screen bg-cover bg-no-repeat mt-7 md:mt-0 flex flex-col justify-end" style="background-image: url('https://i.postimg.cc/3w3tqMJt/footer.png');">
+<div class="md:mb-52 md:ml-14 mb-24 max-w-80 ml-6  md:max-w-96">
+    <h1 class="font-black text-primary md:text-start text-center  text-5xl md:text-6xl uppercase italic tracking-wide">¡Ponte en contacto hoy!</h1>
 </div>
-<div class="h-1/4 bg-primary grid grid-cols-3 p-9">
+<div class="md:h-1/4 h-auto bg-primary grid  grid-cols-1 md:grid-cols-3 p-9">
     <div>
       <h2 class="font-black italic text-2xl">DIRRECCIÓN</h2>
       <p class="tracking-wider text-lg my-1">Calle Cervantes, 34, Madrid, CP 28001</p>
     </div>
-    <div>
+    <div class="my-5 md:my-0">
        <h2  class="font-black italic text-2xl" >CORREO</h2>
        <p class="tracking-wider text-lg  my-1">hola@unsitiogenial.es</p>
     </div>
