--- a/src/sections/info.astro
+++ b/src/sections/info.astro
@@ -1,6 +1,6 @@
-<section class="grid grid-cols-1 md:grid-cols-2   h-screen">
+<section class="grid grid-cols-1 md:grid-cols-2  h-screen">
 
-  <article class=" flex flex-col  max-w-80 ml-7 justify-center items-center md:max-w-md md:items-start md:ml-52    ">
+  <article class=" flex flex-col  max-w-80  mx-auto justify-center items-center    md:max-w-md   md:items-start md:ml-52    ">
     <h1 class="uppercase text-primary  font-black italic text-4xl text-center md:text-start  md:text-6xl">Sobre nuestra familia deportista</h1>
     <p class="text-white text-center tracking-wider text-lg my-6  md:text-start   md:text-xl  md:my-8  ">
       Astrás lo fundó en 2001 un matrimonio, Rubén y Adoración. Desde entonces,
