--- a/src/sections/footer.astro
+++ b/src/sections/footer.astro
@@ -1,5 +1,5 @@
-<footer class="h-screen bg-cover bg-no-repeat mt-7 md:mt-0 flex flex-col justify-end" style="background-image: url('https://i.postimg.cc/3w3tqMJt/footer.png');">
-<div class="md:mb-52 md:ml-14 mb-24 max-w-80 ml-6  md:max-w-96">
+<footer class="h-screen bg-cover bg-no-repeat mt-7 md:mt-0 flex flex-col md:justify-end  justify-center" style="background-image: url('https://i.postimg.cc/3w3tqMJt/footer.png');">
+<div class="mb-24 max-w-80 ml-6  md:max-w-96 md:mb-52 md:ml-14 ">
     <h1 class="font-black text-primary md:text-start text-center  text-5xl md:text-6xl uppercase italic tracking-wide">¡Ponte en contacto hoy!</h1>
 </div>
 <div class="md:h-1/4 h-auto bg-primary grid  grid-cols-1 md:grid-cols-3 p-9">
