--- a/src/sections/infoBenefits.astro
+++ b/src/sections/infoBenefits.astro
@@ -3,7 +3,7 @@ const H1_style = "uppercase text-primary text-2xl md:text-3xl font-black";
 ---
 
 <section class="flex text-center flex-col h-screen">
-  <h1 class="text-primary italic font-black text-5xl mt-5">QUE OFRECEMOS</h1>
+  <h1 class="text-primary italic font-black md:text-5xl  text-4xl mt-5">QUE OFRECEMOS</h1>
   <p class="text-white text-lg mt-5 mb-9 tracking-wide">Nos comprometemos a brindarte con la mejor experiencia de entrenamiento.</p>
 
   <article class="grid grid-cols-1 md:grid-cols-3 gap-4  mx-9 md:mx-16 h-full">
