--- a/src/sections/afterBeforeInfo.astro
+++ b/src/sections/afterBeforeInfo.astro
@@ -14,7 +14,7 @@
                  <b class="italic">Lauren Cross, 28</b>   
              </div>
          </div>
-         <div class="bg-white bg-cover flex  flex-col justify-end h-80  md:h-96 hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('https://i.postimg.cc/4yj82mmc/person-Thirt.png');">
+         <div class="bg-white bg-cover  hidden md:flex  flex-col justify-end h-80  md:h-96 hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('https://i.postimg.cc/4yj82mmc/person-Thirt.png');">
             <div class="h-2/8 w-full bg-primary  py-4 px-2 md:px-8 md:py-4  ">
                  <p class="text-sm mb-5">"No puedo decir lo suficiente sobre este gimnasio. Los entrenamientos son intensos pero efectivos, y el personal es amable y servicial. ¡Me encanta!"</p>
                  <b class="italic">Tomás Cano, 44</b>   
