--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,8 @@ import PrincipalMain from '../sections/PrincipalMain.astro';
 import InfoBenefits from '../sections/infoBenefits.astro'
 import AfterBeforeInfo from '../sections/afterBeforeInfo.astro'
 import Footer from '../sections/footer.astro';
+import Price from '../sections/price.astro';
+
 
 ---
 
@@ -13,6 +15,7 @@ import Footer from '../sections/footer.astro';
 	<main >
 		<InfoMain />
 		<InfoBenefits />
+        <Price />
 		<AfterBeforeInfo />
 	</main>
 	<Footer />
