--- a/src/sections/PrincipalMain.astro
+++ b/src/sections/PrincipalMain.astro
@@ -1,12 +1,12 @@
-<nav class="z-50 absolute flex gap-7 ml-16 my-11 justify-center items-center text-center animate-blurred-fade-in" >
+<nav class="z-50 absolute flex gap-7 ml-16 my-11 justify-center items-center text-center " >
     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-barbell text-yellow-400" width="32" height="32" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M2 12h1" /><path d="M6 8h-2a1 1 0 0 0 -1 1v6a1 1 0 0 0 1 1h2" /><path d="M6 7v10a1 1 0 0 0 1 1h1a1 1 0 0 0 1 -1v-10a1 1 0 0 0 -1 -1h-1a1 1 0 0 0 -1 1z" /><path d="M9 12h6" /><path d="M15 7v10a1 1 0 0 0 1 1h1a1 1 0 0 0 1 -1v-10a1 1 0 0 0 -1 -1h-1a1 1 0 0 0 -1 1z" /><path d="M18 8h2a1 1 0 0 1 1 1v6a1 1 0 0 1 -1 1h-2" /><path d="M22 12h-1" /></svg>
     <h1 class="text-white font-black text-2xl uppercase">Gimnasio Astreus</h1>
 </nav>
  
-<section class="h-screen relative  flex justify-center items-center text-center animate-blurred-fade-in ">
+<section class="h-screen relative  flex justify-center items-center text-center  ">
     <div class="absolute z-40">
-        <h1 class="font-black text-8xl text-white italic " >SÉ EL MEJOR</h1>
-        <button class="bg-primary mt-9 py-3 px-12 tracking-wider text-xl hover:scale-105 transition hover:shadow-lg hover:opacity-90"><a href="#">ÚNETE HOY</a></button>
+        <h1 class="font-black text-8xl text-white italic animate-zoom-in  " >SÉ EL MEJOR</h1>
+        <button class="bg-primary mt-9   py-3 px-12 tracking-wider text-xl hover:scale-105 transition hover:shadow-lg hover:opacity-90"><a href="#">ÚNETE HOY</a></button>
     </div>
     <img   class="object-cover h-screen w-screen saturate-150 " src="https://i.postimg.cc/PJvpyqg0/mainIMG.webp" alt="">
 </section>
