--- a/src/sections/infoBenefits.astro
+++ b/src/sections/infoBenefits.astro
@@ -2,7 +2,7 @@
 const H1_style = "uppercase text-primary text-2xl md:text-3xl font-black";
 ---
 
-<section class="flex text-center flex-col h-screen">
+<section data-aos="zoom-in" class="flex text-center flex-col h-screen">
   <h1 class="text-primary italic font-black md:text-5xl  text-4xl mt-5">QUE OFRECEMOS</h1>
   <p class="text-white text-lg  md:text-xl mt-5 mb-9 tracking-wide">Nos comprometemos a brindarte con la mejor experiencia de entrenamiento.</p>
 
@@ -19,3 +19,4 @@ const H1_style = "uppercase text-primary text-2xl md:text-3xl font-black";
   </article>
 
 </section>
+
