--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,9 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import InfoMain from '../sections/info.astro'
-import PrincipalMain from '../sections/PrincipalMain.astro';
-import InfoBenefits from '../sections/infoBenefits.astro'
-import AfterBeforeInfo from '../sections/afterBeforeInfo.astro'
-import Footer from '../sections/footer.astro';
-import Price from '../sections/price.astro';
+import InfoMain from '../sections/SectionsIndex/info.astro'
+import PrincipalMain from '../sections/SectionsIndex/PrincipalMain.astro';
+import InfoBenefits from '../sections/SectionsIndex/infoBenefits.astro'
+import AfterBeforeInfo from '../sections/SectionsIndex/afterBeforeInfo.astro'
 
 
 ---
@@ -15,10 +13,8 @@ import Price from '../sections/price.astro';
 	<main >
 		<InfoMain />
 		<InfoBenefits />
-        <Price />
 		<AfterBeforeInfo />
 	</main>
-	<Footer />
  
 </Layout>
 
