--- a/src/sections/SectionsIndex/infoBenefits.astro
+++ b/src/sections/SectionsIndex/infoBenefits.astro
@@ -8,14 +8,16 @@ const H1_style = "uppercase text-primary text-2xl md:text-3xl font-black";
 
   <article class="grid grid-cols-1 md:grid-cols-3 gap-4  mx-9 md:mx-16 h-full">
     <div class=" bg-cover flex justify-center items-center hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('https://i.postimg.cc/zfn1CY2p/second-IMG4.png');">
-      <h1 class={H1_style}>Nuestro gimnasio</h1>
+     <a href="/About"> <h1 class={H1_style}>Nuestro gimnasio</h1></a>
     </div>
     <div class=" bg-cover flex justify-center items-center hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('https://i.postimg.cc/g2h9pPpd/second-IMG6.png');">
-      <h1  class={H1_style} >Explora nuestras clases en grupo</h1>
+     <a href=""><h1  class={H1_style} >Explora nuestras clases en grupo</h1></a> 
     </div>
     <div class=" bg-cover flex justify-center items-center hover:scale-105 transition saturate-50 hover:saturate-100" style="background-image: url('https://i.postimg.cc/yNCMYr6R/second-IMG7.png');">
-      <h1  class={H1_style}>entrenamientos personales</h1>
+     <a href=""><h1  class={H1_style}>entrenamientos personales</h1></a> 
     </div>
+
+    
   </article>
 
 </section>
