--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import Footer from '../sections/SectionsIndex/footer.astro';
+
 import '@fontsource-variable/antonio';
 interface Props {
 	title: string;
@@ -16,9 +18,11 @@ const { title } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<title>Gimnasio Astreus</title>
 	</head>
-	<body>
+	<body class="relative">
 		<slot />
 	</body>
+	<Footer />
+
 </html>
 <style is:global>
 	html {
