--- a/src/pages/About.astro
+++ b/src/pages/About.astro
@@ -1,13 +1,15 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Navbar from '../sections/NavSections/Navbar.astro'
+import Ubicacion from '../sections/OurGymSections/ubicacion.astro'
+
 
 ---
 
 <Layout title="otro">
 	<Navbar />
-	<main >
-		
+	<main class="lg:max-w-5xl lg:mx-auto" >
+		<Ubicacion />
 	</main>
  
 </Layout>
