--- a/src/sections/NavSections/Navbar.astro
+++ b/src/sections/NavSections/Navbar.astro
@@ -20,8 +20,8 @@ const A_StyleResponsive = "hover:underline hover:scale-110 transition text-white
 <nav class="GaleryZoom fixed top-0 left-0 backdrop-blur-md bg-black/30 h-full hidden  justify-center items-center w-full z-50 ">
     <span class="absolute top-0 right-3 text-4xl font-bold text-white  z-50 hover:text-red-900">X</span>
     <div class=" flex flex-col justify-center items-center h-screen  w-auto  ">
-        <a class={A_StyleResponsive} href="">Home</a>
-        <a class={A_StyleResponsive} href="">About</a>
+        <a class={A_StyleResponsive} href="http://localhost:4321/">Home</a>
+        <a class={A_StyleResponsive} href="/About">About</a>
         <a class={A_StyleResponsive} href="#">Planes</a>
         
        <button class="bg-primary px-9 py-5 my-3  text-4xl hover:shadow-2xl text-red-600 hover:scale-110 transition font-black rounded-lg"><a href="">UNETE AHORA</a></button> 
