--- a/src/pages/About.astro
+++ b/src/pages/About.astro
@@ -8,7 +8,7 @@ import Ubicacion from '../sections/OurGymSections/ubicacion.astro'
 
 <Layout title="otro">
 	<Navbar />
-	<main class="lg:max-w-5xl lg:mx-auto" >
+	<main class="lg:max-w-5xl lg:mx-auto max-w-80 mx-auto" >
 		<Ubicacion />
 	</main>
  
