--- a/src/sections/OurGymSections/ubicacion.astro
+++ b/src/sections/OurGymSections/ubicacion.astro
@@ -1,6 +1,6 @@
 <section class="flex flex-col items-center justify-center lg:h-mxScreem h-midScreem lg:justify-start">
   <h1 class="text-primary font-black text-3xl lg:text-5xl mb-4  lg:mb-9 lg:mt-8">
-    NUESTRA UBICACION
+    NUESTRA UBICACIÓN
   </h1>
   <div class="grid grid-cols-1 lg:grid-cols-2 justify-center tracking-wider items-center lg:gap-9">
     <div class="text-center flex flex-col gap-5">
