--- a/src/pages/About.astro
+++ b/src/pages/About.astro
@@ -2,6 +2,8 @@
 import Layout from '../layouts/Layout.astro';
 import Navbar from '../sections/NavSections/Navbar.astro'
 import Ubicacion from '../sections/OurGymSections/ubicacion.astro'
+import SliderGym from '../sections/OurGymSections/sliderGym.astro'
+
 
 
 ---
@@ -10,6 +12,7 @@ import Ubicacion from '../sections/OurGymSections/ubicacion.astro'
 	<Navbar />
 	<main class="lg:max-w-5xl lg:mx-auto max-w-80 mx-auto" >
 		<Ubicacion />
+		<SliderGym />
 	</main>
  
 </Layout>
