--- a/src/sections/OurGymSections/sliderGym.astro
+++ b/src/sections/OurGymSections/sliderGym.astro
@@ -1,23 +1,28 @@
-<section>
-    <div id="carouselExampleFade" class="carousel slide carousel-fade">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="..." class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
+---
+const silder = "w-full left-0 sticky object-cover rounded-md snap-center";
+---
+<section class=" h-auto flex flex-col items-center">
+<h1 class="text-primary font-black text-3xl lg:text-5xl my-4">INSTALACIONES</h1>
+<p class="text-white mb-7">"Ofrecemos instalaciones de primera clase para nuestros socios. Desde un gimnasio equipado hasta áreas de relajación."</p>
+ <article class="grid grid-cols-2 lg:grid-cols-3 gap-4 ">
+    <div class="h-4/5 hover:scale-105 transition   lg:flex">
+        <img  class="w-full object-cover aspect-video"  src="https://i.postimg.cc/zfn1CY2p/second-IMG4.png" alt="" />
+     </div>
+     <div class="h-80 hidden  lg:flex">
+        <img  class="w-full object-cover aspect-video"  src="https://i.postimg.cc/zfn1CY2p/second-IMG4.png" alt="" />
+     </div>
+     <div class="h-80 hidden  lg:flex">
+        <img  class="w-full object-cover aspect-video"  src="https://i.postimg.cc/zfn1CY2p/second-IMG4.png" alt="" />
+     </div>
+     <div class="h-80 hidden  lg:flex">
+        <img  class="w-full object-cover aspect-video"  src="https://i.postimg.cc/zfn1CY2p/second-IMG4.png" alt="" />
+     </div>
+     <div class="h-80 hidden  lg:flex">
+        <img  class="w-full object-cover aspect-video"  src="https://i.postimg.cc/zfn1CY2p/second-IMG4.png" alt="" />
+     </div>
+     <div class="h-80 hidden  lg:flex">
+        <img  class="w-full object-cover aspect-video"  src="https://i.postimg.cc/zfn1CY2p/second-IMG4.png" alt="" />
+     </div>
+   
+ </article>
 </section>
