--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,8 @@ import InfoMain from '../sections/SectionsIndex/info.astro'
 import PrincipalMain from '../sections/SectionsIndex/PrincipalMain.astro';
 import InfoBenefits from '../sections/SectionsIndex/infoBenefits.astro'
 import AfterBeforeInfo from '../sections/SectionsIndex/afterBeforeInfo.astro'
+import Price from '../sections/SectionsIndex/price.astro'
+
 
 
 ---
@@ -11,6 +13,7 @@ import AfterBeforeInfo from '../sections/SectionsIndex/afterBeforeInfo.astro'
 <Layout title="Título del Layout">
     <PrincipalMain />
 	<main >
+       <Price/>
 		<InfoMain />
 		<InfoBenefits />
 		<AfterBeforeInfo />
