--- a/src/sections/OurGymSections/sliderGym.astro
+++ b/src/sections/OurGymSections/sliderGym.astro
@@ -2,8 +2,8 @@
 const silder = "w-full left-0 sticky object-cover rounded-md snap-center";
 ---
 <section class=" h-auto flex flex-col items-center">
-<h1 class="text-primary font-black text-3xl lg:text-5xl my-4">INSTALACIONES</h1>
-<p class="text-white mb-7">"Ofrecemos instalaciones de primera clase para nuestros socios. Desde un gimnasio equipado hasta áreas de relajación."</p>
+<h1 class="text-primary font-black text-4xl lg:text-5xl my-4">INSTALACIONES</h1>
+<p class="text-white mb-7 text-lg">"Ofrecemos instalaciones de primera clase para nuestros socios. Desde un gimnasio equipado hasta áreas de relajación."</p>
  <article class="grid grid-cols-2 lg:grid-cols-3 gap-4 ">
     <div class="h-4/5 hover:scale-105 transition   lg:flex">
         <img  class="w-full object-cover aspect-video"  src="https://i.postimg.cc/zfn1CY2p/second-IMG4.png" alt="" />
