--- a/src/sections/SectionsIndex/price.astro
+++ b/src/sections/SectionsIndex/price.astro
@@ -1,3 +1,54 @@
-<section>
-    
+<section class=" flex flex-col justify-center items-center ">
+  <h1 class="text-primary lg:text-5xl font-black">Planes</h1>
+  <div  class="grid  grid-cols-1  lg:gap-4 lg:grid-cols-3 lg:mx-16">
+    <article class="border-solid border-2 rounded-md">
+      <h2 class="text-primary ">Plan Básico - S/50 al mes:</h2>
+      <ul>
+        <li>
+          Acceso completo al gimnasio durante las horas de operación estándar.
+        </li>
+        <li>Clases grupales semanales de yoga y aeróbicos.</li>
+        <li>Asesoramiento nutricional básico.</li>
+        <li>Descuento del 10% en sesiones de entrenamiento personal.</li>
+      </ul>
+    </article>
+    <article>
+      <h2>Plan Premium - S/100 al mes:</h2>
+      <ul>
+        <li>
+          Acceso ilimitado al gimnasio las 24 horas del día, los 7 días de la
+          semana.
+        </li>
+        <li>
+          Todas las clases grupales incluidas: yoga, pilates, aeróbicos, y
+          entrenamiento de fuerza.
+        </li>
+        <li>
+          Asesoramiento nutricional personalizado y plan de alimentación
+          individualizado.
+        </li>
+        <li>Sesión gratuita de entrenamiento personal cada mes.</li>
+        <li>Acceso exclusivo a eventos y talleres especiales.</li>
+      </ul>
+    </article>
+    <article>
+      <h2>Plan VIP - S/200 al mes:</h2>
+      <ul>
+        <li>Acceso prioritario a todas las clases y equipos.</li>
+        <li>
+          Entrenamiento personalizado ilimitado con un entrenador personal
+          certificado.
+        </li>
+        <li>
+          Programa de seguimiento de progreso y evaluaciones físicas
+          trimestrales.
+        </li>
+        <li>
+          Acceso exclusivo a áreas de relajación y bienestar, como sauna y
+          jacuzzi.
+        </li>
+        <li>Descuento del 15% en productos de la tienda del gimnasio.</li>
+      </ul>
+    </article>
+  </div>
 </section>
