--- a/src/sections/OurGymSections/ubicacion.astro
+++ b/src/sections/OurGymSections/ubicacion.astro
@@ -2,10 +2,10 @@
   
   <div class="grid grid-cols-1 lg:grid-cols-2 justify-center tracking-wider items-center lg:gap-9">
     <div class="text-center flex flex-col gap-5">
-        <h1 class="text-primary font-black text-3xl lg:text-5xl mb-4  lg:mb-2 ">
+        <h1 class="text-primary font-black text-4xl lg:text-5xl mb-4  lg:mb-2 ">
             NUESTRA UBICACIÓN
           </h1>
-      <p class="text-white text-base lg:text-lg">
+      <p class="text-white text-lg">
         "Nuestra gimnasio se encuentra en una ubicación conveniente y accesible.
         ¡Ven a visitarnos y descubre un espacio dedicado a tu bienestar! Para
         encontrar fácilmente nuestra ubicación en el mapa."
