--- a/src/sections/SectionsIndex/price.astro
+++ b/src/sections/SectionsIndex/price.astro
@@ -1,54 +1,59 @@
-<section class=" flex flex-col justify-center items-center ">
-  <h1 class="text-primary lg:text-5xl font-black">Planes</h1>
-  <div  class="grid  grid-cols-1  lg:gap-4 lg:grid-cols-3 lg:mx-16">
-    <article class="border-solid border-2 rounded-md">
-      <h2 class="text-primary ">Plan Básico - S/50 al mes:</h2>
-      <ul>
+---
+const Article = "hover:scale-105 transition border-solid hover:border-2 p-5   mx-7 lg:mx-0 rounded-md lg:h-auto flex flex-col justify-center";
+const H2=" text-primary text-center text-2xl lg:text-3xl font-bold ";
+const Ul ="text-white lg:px-7 lg:my-9 my-5 tracking-wider lg:text-lg";
+const Buttoms="bg-primary py-4 rounded-sm mx-4 text-lg lg:text-xl font-black"
+---
+
+
+<section class=" flex flex-col justify-center items-center my-6">
+  <h1 class="text-primary  italic text-4xl lg:text-6xl  font-black my-7  lg:my-4">Planes</h1>
+  <div  class="grid  grid-cols-1 gap-3  lg:gap-9 lg:grid-cols-3 h-auto lg:mx-16  ">
+    <article class={Article}>
+      <h2 class={H2}>Plan Básico - S/50 al mes:</h2>
+      <ul class={Ul}>
         <li>
-          Acceso completo al gimnasio durante las horas de operación estándar.
+          - Acceso completo al gimnasio durante las horas de operación estándar.
         </li>
-        <li>Clases grupales semanales de yoga y aeróbicos.</li>
-        <li>Asesoramiento nutricional básico.</li>
-        <li>Descuento del 10% en sesiones de entrenamiento personal.</li>
+        <li>- Clases grupales semanales de yoga y aeróbicos.</li>
+        <li> - Asesoramiento nutricional básico.</li>
+        <li>- Descuento del 10% en sesiones de entrenamiento personal.</li>
       </ul>
+      <button class={Buttoms}><a href="#">LO QUIERO</a></button>
     </article>
-    <article>
-      <h2>Plan Premium - S/100 al mes:</h2>
-      <ul>
+    <article class={Article}>
+      <h2  class={H2}>Plan Premium - S/100 al mes:</h2>
+      <ul  class={Ul}>
         <li>
-          Acceso ilimitado al gimnasio las 24 horas del día, los 7 días de la
+          - Acceso ilimitado al gimnasio las 24 horas del día, los 7 días de la
           semana.
         </li>
         <li>
-          Todas las clases grupales incluidas: yoga, pilates, aeróbicos, y
+          - Todas las clases grupales incluidas: yoga, pilates, aeróbicos, y
           entrenamiento de fuerza.
         </li>
-        <li>
-          Asesoramiento nutricional personalizado y plan de alimentación
-          individualizado.
-        </li>
-        <li>Sesión gratuita de entrenamiento personal cada mes.</li>
-        <li>Acceso exclusivo a eventos y talleres especiales.</li>
+        <li>- Sesión gratuita de entrenamiento personal cada mes.</li>
+        <li>- Acceso exclusivo a eventos y talleres especiales.</li>
       </ul>
+      <button class={Buttoms}><a href="#">LO QUIERO</a></button>
+
     </article>
-    <article>
-      <h2>Plan VIP - S/200 al mes:</h2>
-      <ul>
-        <li>Acceso prioritario a todas las clases y equipos.</li>
+    <article class={Article}>
+      <h2  class={H2}>Plan VIP - S/200 al mes:</h2>
+      <ul  class={Ul}>
+        <li>- Acceso prioritario a todas las clases y equipos.</li>
         <li>
-          Entrenamiento personalizado ilimitado con un entrenador personal
+         - Entrenamiento personalizado ilimitado con un entrenador personal
           certificado.
         </li>
         <li>
-          Programa de seguimiento de progreso y evaluaciones físicas
+          - Programa de seguimiento de progreso y evaluaciones físicas
           trimestrales.
         </li>
-        <li>
-          Acceso exclusivo a áreas de relajación y bienestar, como sauna y
-          jacuzzi.
-        </li>
-        <li>Descuento del 15% en productos de la tienda del gimnasio.</li>
+        <li>- Descuento del 15% en productos de la tienda del gimnasio.</li>
       </ul>
+      <button class={Buttoms}><a href="#">LO QUIERO</a></button>
+
     </article>
   </div>
 </section>
