--- a/src/sections/SectionsIndex/price.astro
+++ b/src/sections/SectionsIndex/price.astro
@@ -1,13 +1,13 @@
 ---
 const Article = "hover:scale-105 transition border-solid hover:border-2 p-5   mx-7 lg:mx-0 rounded-md lg:h-auto flex flex-col justify-center";
 const H2=" text-primary text-center text-2xl lg:text-3xl font-bold ";
-const Ul ="text-white lg:px-7 lg:my-9 my-5 tracking-wider lg:text-lg";
+const Ul ="text-white lg:px-7 lg:my-9 my-5 tracking-wider lg:text-base";
 const Buttoms="bg-primary py-4 rounded-sm mx-4 text-lg lg:text-xl font-black"
 ---
 
 
 <section class=" flex flex-col justify-center items-center my-6">
-  <h1 class="text-primary  italic text-4xl lg:text-6xl  font-black my-7  lg:my-4">Planes</h1>
+  <h1 class="text-primary  italic text-4xl lg:text-6xl  font-black my-7  lg:my-9">Planes</h1>
   <div  class="grid  grid-cols-1 gap-3  lg:gap-9 lg:grid-cols-3 h-auto lg:mx-16  ">
     <article class={Article}>
       <h2 class={H2}>Plan Básico - S/50 al mes:</h2>
