--- a/src/pages/About.astro
+++ b/src/pages/About.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import InfoMain from '../sections/SectionsIndex/info.astro'
 import Navbar from '../sections/NavSections/Navbar.astro'
-import Ubicacion from '../sections/OurGymSections/ubicacion.astro'
 import SliderGym from '../sections/OurGymSections/sliderGym.astro'
 
 
@@ -10,8 +10,8 @@ import SliderGym from '../sections/OurGymSections/sliderGym.astro'
 
 <Layout title="otro">
 	<Navbar />
+	<InfoMain />
 	<main class="lg:max-w-5xl lg:mx-auto max-w-80 mx-auto" >
-		<Ubicacion />
 		<SliderGym />
 	</main>
  
