--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,10 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import InfoMain from '../sections/SectionsIndex/info.astro'
 import PrincipalMain from '../sections/SectionsIndex/PrincipalMain.astro';
 import InfoBenefits from '../sections/SectionsIndex/infoBenefits.astro'
 import AfterBeforeInfo from '../sections/SectionsIndex/afterBeforeInfo.astro'
 import Price from '../sections/SectionsIndex/price.astro'
+import Ubicacion from '../sections/OurGymSections/ubicacion.astro'
 
 
 
@@ -13,10 +13,10 @@ import Price from '../sections/SectionsIndex/price.astro'
 <Layout title="Título del Layout">
     <PrincipalMain />
 	<main >
-       <Price/>
-		<InfoMain />
+        <Price/>
 		<InfoBenefits />
 		<AfterBeforeInfo />
+		<Ubicacion />
 	</main>
  
 </Layout>
