--- a/src/sections/NavSections/Navbar.astro
+++ b/src/sections/NavSections/Navbar.astro
@@ -1,11 +1,11 @@
 ---
-const A_Style = "hover:underline hover:scale-110 transition text-lg hover:tracking-wider italic";
+const A_Style = "hover:underline hover:scale-110 transition text-lg hover:tracking-wider ";
 const A_StyleResponsive = "hover:underline hover:scale-110 transition text-white font-black my-5  text-4xl ";
 
 ---
 
 <nav class="bg-primary p-4 flex  items-center justify-between w-full  ">
-  <h1 class=" text-xl font-black italic hover:scale-105 transition"><a href="">Gimnasio Astreus</a></h1>
+  <h1 class=" text-xl font-black  hover:scale-105 transition"><a href="">Gimnasio Astreus</a></h1>
   <div class=" hidden lg:w-1/5 lg:flex lg:justify-between lg:items-center   ">
     <a class={A_Style} href="">Home</a>
     <a class={A_Style} href="">About</a>
