--- a/src/sections/OurGymSections/ubicacion.astro
+++ b/src/sections/OurGymSections/ubicacion.astro
@@ -1,11 +1,11 @@
-<section class="flex flex-col items-center justify-center lg:h-mxScreem h-midScreem lg:justify-center">
+<section class="flex flex-col items-center justify-center h-auto   lg:justify-center lg:max-w-5xl lg:mx-auto max-w-80 mx-auto">
   
-  <div class="grid grid-cols-1 lg:grid-cols-2 justify-center tracking-wider items-center lg:gap-9">
+  <div class="grid grid-cols-1 lg:grid-cols-2 justify-center my-6 tracking-wider gap-6 items-center lg:gap-9">
     <div class="text-center flex flex-col gap-5">
         <h1 class="text-primary font-black text-4xl lg:text-5xl mb-4  lg:mb-2 ">
             NUESTRA UBICACIÓN
           </h1>
-      <p class="text-white text-lg">
+      <p class="text-white text-lg ">
         "Nuestra gimnasio se encuentra en una ubicación conveniente y accesible.
         ¡Ven a visitarnos y descubre un espacio dedicado a tu bienestar! Para
         encontrar fácilmente nuestra ubicación en el mapa."
@@ -14,7 +14,7 @@
         >Link Ubicacion</a
       >
     </div>
-     <div class="h-80 hidden  lg:flex">
+     <div class="h-auto ">
         <img  class="w-full object-cover aspect-video"  src="https://i.postimg.cc/zfn1CY2p/second-IMG4.png" alt="" />
      </div>
   </div>
